--- a/1.dashboard.html
+++ b/1.dashboard.html
@@ -58,8 +58,8 @@
         nav {
             background-color: #024a50c2;
             /* background:linear-gradient(rgb(69, 69, 252),rgb(101, 132, 242),rgb(47, 47, 215)); */
-            box-shadow: 0 0 5px;
-            margin-bottom: px;
+/*             box-shadow: 0 0 5px;
+            margin-bottom: px; */
         }
 
         .navbar-nav li a {
@@ -68,10 +68,10 @@
 
             /* background-color: azure; */
            
-           background-color: white;
+/*            background-color: white; */
             /* background: linear-gradient(rgb(21, 82, 224), rgb(177, 174, 174)); */
-            box-shadow: 0 0 3px;
-            border-radius: 8px;
+/*             box-shadow: 0 0 3px;
+            border-radius: 8px; */
         }
 
         .navbar-nav li a:hover {
