--- a/1.dashboard.html
+++ b/1.dashboard.html
@@ -70,8 +70,8 @@
            
 /*            background-color: white; */
             /* background: linear-gradient(rgb(21, 82, 224), rgb(177, 174, 174)); */
-/*             box-shadow: 0 0 3px;
-            border-radius: 8px; */
+        box-shadow: 0 0 3px;
+           /* border-radius: 8px; */
         }
 
         .navbar-nav li a:hover {
