--- a/1.dashboard.html
+++ b/1.dashboard.html
@@ -58,7 +58,8 @@
         nav {
             background-color: #024a50c2;
             /* background:linear-gradient(rgb(69, 69, 252),rgb(101, 132, 242),rgb(47, 47, 215)); */
-          box-shadow: 0 0 5px;
+/*           box-shadow: 0 0 5px; */
+            color:white;
 /*            margin-bottom: px; */
         }
 
@@ -77,6 +78,7 @@
         .navbar-nav li a:hover {
             background-color: rgba(19, 217, 151, 0.751);
             color: black;
+             text-decoration: underline;
             /* border: 1px solid white; */
             /* background: linear-gradient(rgb(136, 110, 229), rgb(0, 0, 0)); */
         }
@@ -241,12 +243,12 @@
                     <ul class="navbar-nav">
                         <li class="nav-item pr-2 " id="home"><a class="nav-link text-light" href="#">Home</a></li>
                         <li class="nav-item pr-2"><a class="nav-link" href="#about" id="abo"
-                                style="color:  rgb(0, 57, 38);  ">About</a></li>
+                                >About</a></li>
                                 <li class="nav-item pr-2"><a class="nav-link" href="#pric"
-                                    style="color:  rgb(0, 57, 38);  ">Prices</a></li>
+                                    >Prices</a></li>
                                     <li class="nav-item pr-2"><a href="Signin.html" class="nav-link" style="color:  rgb(0, 57, 38);">Contact</a></li>
                         <li class="nav-item pr-2"><a class="nav-link " href="login.html"
-                            style="color:  rgb(0, 57, 38); ">Log&nbsp;in</a></li>
+                            >Log&nbsp;in</a></li>
                             
                         <!-- <li class="nav-item pr-2"><a class="nav-link" href="pricing.html"
                                 style="color: white;">Prices</a></li> -->
