--- a/1.dashboard.html
+++ b/1.dashboard.html
@@ -66,7 +66,7 @@
         .navbar-nav li a {
             font-size: 1.2rem;
             font-weight: 640;
-color:white;
+            color: #FFFFFF;
             /* background-color: azure; */
            
 /*            background-color: white; */
@@ -241,14 +241,11 @@ color:white;
                 </button>
                 <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
                     <ul class="navbar-nav">
-                        <li class="nav-item pr-2 " id="home"><a class="nav-link text-light" href="#">Home</a></li>
-                        <li class="nav-item pr-2"><a class="nav-link" href="#about" id="abo"
-                                >About</a></li>
-                                <li class="nav-item pr-2"><a class="nav-link" href="#pric"
-                                    >Prices</a></li>
-                                    <li class="nav-item pr-2"><a href="Signin.html" class="nav-link" style="color:  rgb(0, 57, 38);">Contact</a></li>
-                        <li class="nav-item pr-2"><a class="nav-link " href="login.html"
-                            >Log&nbsp;in</a></li>
+                        <li class="nav-item pr-2 " id="home"> <a class="nav-link text-light" href="#">Home</a></li>
+                        <li class="nav-item pr-2"><a class="nav-link" href="#about" id="abo">About</a></li>
+                                <li class="nav-item pr-2"><a class="nav-link" href="#pric">Prices</a></li>
+                                    <li class="nav-item pr-2"><a href="Signin.html" class="nav-link" >Contact</a></li>
+                        <li class="nav-item pr-2"><a class="nav-link " href="login.html">Log&nbsp;in</a></li>
                             
                         <!-- <li class="nav-item pr-2"><a class="nav-link" href="pricing.html"
                                 style="color: white;">Prices</a></li> -->
