--- a/login.html
+++ b/login.html
@@ -105,12 +105,12 @@
 
                         <div class="form-group">
                             <p id="test"></p>
-                            <label for="in" class="" style="font-size: 1.2rem;">Username</label>
+                            <label for="in" class="" style="font-size: 1.2rem;">Username (admin@gmail.com)</label>
                             <input type="text" id="in" class="form-control" required>
                             <div></div>
                         </div>
                         <div class="form-group">
-                            <label for="in1" style="font-size: 1.2rem;">Password</label>
+                            <label for="in1" style="font-size: 1.2rem;">Password (12345678)</label>
                             <input type="password" id="in1" class="form-control" required>
                         </div>
                         <div class="form-group">
